--- a/StcDemo/app/src/main/res/values/strings.xml
+++ b/StcDemo/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">ONEPASS</string>
-    <string name="app_version" translatable="false">0.1.1.12</string>
+    <string name="app_version" translatable="false">0.1.2.4</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
 
@@ -13,7 +13,7 @@
     <string name="user_id_invalid">User id is not correct</string>
     <string name="url_invalid">URL is not correct</string>
 
-    <string name="button_enroll">Sing In</string>
+    <string name="button_enroll">Sign In</string>
     <string name="button_verify">Verify</string>
     <string name="button_agree">Agree and continue</string>
     <string name="button_disagree">Disagree</string>
